style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  height: 100vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #121212;
  color: rgb(118, 118, 118);
  overflow: hidden;
  font-family: "IBM Plex Mono", monospace;
}

.atropos-highlight {
  opacity: 0.01 !important;
  background: radial-gradient(
    circle at center,
    rgba(216, 216, 216, 0.15),
    transparent 90%
  );
}

.my-atropos {
  width: 100%;
  height: 100%;
}
.atropos-rotate,
.atropos-scale {
  pointer-events: none;
}

.atropos-inner {
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  pointer-events: auto;
}

h1 {
  color: rgb(225, 225, 225);
  font-family: "IBM Plex Mono", monospace;
  font-size: 1.3rem;
  letter-spacing: 0.6rem;
  margin: 0;
  text-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
}

.sub-heading {
  font-size: 0.6rem;
  color: rgb(118, 118, 118);
  letter-spacing: 0.2rem;
}

.icon {
  width: 3rem;
  height: 3rem;
  color: rgba(255, 255, 255, 0.8);
}

.divider {
  height: 0.1px;
  margin: 10px 0;
  opacity: 0.1;
  background-color: rgb(113, 113, 113);
  width: 100%;
}

.tabs {
  font-size: 0.7rem;
  margin: 20px 0;
  color: rgb(225, 225, 225);
  position: relative;
  display: flex;
  gap: 8px;
  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
}

.tab {
  position: relative;
  font-size: 0.7rem;
  letter-spacing: 2px;
  color: rgba(255, 255, 255, 0.6);
  cursor: pointer;
  transition: color 0.5s ease;
  padding: 10px 5px;
}

.content {
  font-size: 0.75rem;
}

.tab.active {
  color: #fff;
}

.underline {
  position: absolute;
  bottom: 0;
  height: 1px;
  background: white;
  border-radius: 2px;
  pointer-events: none;
  transition: all 0.5s ease;
}

.foot {
  position: fixed;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 100;
  font-size: 12px;
  opacity: 0.7;
  font-family: "IBM Plex Mono", monospace;
  color: rgba(255, 255, 255, 0.8);
}

.container {
  height: 80vh;
  width: calc(min(100vw - 96px, 800px));
}

.vflex {
  display: flex;
  flex-direction: column;
}

.content-icon {
  height: 0.8rem;
}

.primary {
  color: white;
}

.secondary {
  color: rgb(118, 118, 118);
}

.activity-item {
  transition: all 0.25s ease;
  padding: 5px 2px;
  cursor: pointer;
}

.activity-item:hover {
  transform: translateY(-2px) translateX(2px);
  background-color: rgba(255, 255, 255, 0.05);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
}

.activity-item:hover .date-text {
  opacity: 0;
}

.activity-item:hover .hover-hint {
  opacity: 1;
}

.activity-item {
  transition:
    background-color 0.25s ease,
    color 0.25s ease,
    transform 0.2s ease;
}

.activity-item.active {
  background-color: #ffffff;
  color: #000000;
}

.activity-item.active .title,
.activity-item.active .date,
.activity-item.active .hover-hint,
.activity-item.active svg,
.activity-item.active .content-icon {
  color: #000000;
  stroke: #000000;
}

.activity-item.active {
  box-shadow: 0 10px 30px rgba(255, 255, 255, 0.15);
}

.gap-5 {
  gap: 1rem;
}

.gap-2 {
  gap: 0.5rem;
}

.gap-1 {
  gap: 0.25rem;
}

.hflex {
  display: flex;
  width: 100%;
  height: 100%;
}

.align-center {
  justify-content: center;
  align-items: center;
}

.activity {
  flex: 0 0 70%;
}

.projects {
  flex: 0 0 30%;
}

.between {
  justify-content: space-between;
}

.project-item {
  background-color: #1e1e1e;
  padding: 10px 10px;
  border-radius: 3px;
  min-height: 65px;
  transition:
    transform 0.25s ease,
    background-color 0.25s ease,
    box-shadow 0.25s ease;
}

.project-item:hover {
  transform: translateY(-2px) translateX(2px);
  background-color: rgba(255, 255, 255, 0.064);
  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
  color: white;
}

.project-title {
  font-size: 0.8rem;
  color: rgb(225, 225, 225);
}

.dot {
  fill: rgb(225, 225, 225);
  stroke: none;
  width: 10px;
  height: 10px;
}

.project-tag {
  font-size: 0.6rem;
  width: fit-content;
  padding: 1px 6px;
  color: white;
}

.business-project {
  background-color: #572b2b;
}

.personal-project {
  background-color: #43315a;
}

.freelance-project {
  background-color: #224e2c;
}

.date {
  position: relative;
}

.date-text {
  transition: opacity 0.2s ease;
}

.hover-hint {
  position: absolute;
  right: 0;
  top: 0;

  opacity: 0;
  transition: opacity 0.2s ease;

  color: rgba(255, 255, 255, 0.6);
  font-size: 12px;
  white-space: nowrap;
}

.hint-icon {
  width: 12px;
  height: 12px;
  color: rgba(255, 255, 255, 0.6);
}

.scene {
  position: absolute;
  inset: 0;
  pointer-events: none;
  display: grid;
  place-items: center;
  transition: all 0.5s ease;
}

.scene-root {
  position: relative;
  width: 100%;
  height: 100%;

  display: flex;
  justify-content: center;
  align-items: center;
}

.scene.active {
  opacity: 1;
  pointer-events: auto;
  transform: scale(1);
}

.scene {
  transform: scale(0.96) translateY(10px);
  opacity: 0;
}

.scene.enter {
  transform: scale(1) translateY(0);
  opacity: 1;
}

.scene.exit {
  transform: scale(0.96) translateY(10px);
  opacity: 0;
}

.back-btn {
  display: flex;
  align-items: center;
  gap: 5px;
  color: rgb(118, 118, 118);
  cursor: pointer;
  font-size: 0.75rem;
  transition: all 0.5s ease;
}

.back-btn-icon {
  width: 1rem;
  color: rgb(118, 118, 118);
}

.back-btn:hover {
  color: rgb(225, 225, 225);
}

.project-content {
  font-size: 0.75rem;
  color: rgb(171, 171, 171);
}

.project-subtitle {
  font-size: 0.8rem;
  color: rgb(118, 118, 118);
}

.project-read-details {
  font-size: 0.8rem;
  color: rgb(118, 118, 118);
  margin: 10px 0 20px 0;
}

.bold {
  color: white;
}

.title-icon {
  margin-bottom: 10px;
}

[data-animate],
[data-animate-1],
[data-animate-2],
[data-animate-3],
[data-animate-4],
[data-animate-5] {
  opacity: 0;
  transform: translateY(12px) translateX(24px) scale(0.98);
  filter: blur(10px);
  transition: opacity 0.4s ease, transform 0.4s ease, filter 0.4s ease;
}

.animated-in {
  opacity: 1 !important;
  filter: blur(0) !important;
  transform: translateY(0) scale(1) !important;
}

.animated-out {
  opacity: 0 !important;
  transform: translateY(10px) scale(0.98) !important;
  filter: blur(10px) !important;
}

.para {
  margin-bottom: 12px;
}

